Added new version of the VAE.

--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -170,13 +170,14 @@
     "        super().__init__()\n",
     "        self.seq = seq\n",
     "        self.h2mean = nn.Linear(hidden_dim, out_dim)\n",
-    "        self.h2logvar = nn.Linear(hidden_dim, out_dim)\n",
+    "        self.h2logvar = nn.Linear(hidden_dim, 1)\n",
+    "        self.out_dim = out_dim\n",
     "        \n",
     "    def forward(self, X):\n",
     "        h = self.seq(X)\n",
     "        mean = self.h2mean(h)\n",
     "        logvar = self.h2logvar(h)\n",
-    "        return mean, logvar.exp()\n",
+    "        return mean, logvar.exp() * torch.ones(1, self.out_dim, dtype=X.dtype)\n",
     "    \n",
     "class Decoder(nn.Module):\n",
     "    def __init__(self, seq, hidden_dim, out_dim):\n",
@@ -237,9 +238,9 @@
     "# ----------------------------------------------------------------------\n",
     "\n",
     "# Putting everything together to build the SVAE.\n",
-    "model = beer.VAEGlobalMeanVar.create(\n",
+    "model = beer.VAEGlobalMeanIsotropicCovariance.create(\n",
     "    torch.from_numpy(data.mean(axis=0)).float(),\n",
-    "    torch.from_numpy(data.var(axis=0)).float(),\n",
+    "    torch.from_numpy(data.var(axis=0)).sum().float(),\n",
     "    Encoder(enc_struct, n_units, latent_dim), \n",
     "    Decoder(dec_struct, n_units, obs_dim),\n",
     "    plda,\n",
@@ -251,7 +252,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variational Bayes Training"
+    "## Variational Bayes Training\n",
+    "\n",
+    "### 1. Pre-training"
    ]
   },
   {
@@ -261,7 +264,7 @@
    "outputs": [],
    "source": [
     "npoints = N * ntargets\n",
-    "epochs = 5_000\n",
+    "epochs = 1_000\n",
     "lrate_bayesmodel = 1.\n",
     "lrate_encoder = 1e-3\n",
     "X = torch.from_numpy(data[:npoints]).double()\n",
@@ -270,14 +273,52 @@
     "\n",
     "nnet_parameters = list(model.encoder.parameters()) + list(model.decoder.parameters())\n",
     "std_optimizer = torch.optim.Adam(nnet_parameters, lr=lrate_encoder, weight_decay=1e-2)\n",
-    "params = model.latent_model.grouped_parameters\n",
+    "params = model.grouped_parameters\n",
     "optimizer = beer.BayesianModelCoordinateAscentOptimizer(*params, lrate=lrate_bayesmodel, \n",
     "    std_optim=std_optimizer)\n",
     "    \n",
     "elbos = []\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
-    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), labels=targets, kl_weight=1.)\n",
+    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), labels=targets, nsamples=5, kl_weight=0)\n",
+    "    elbo.backward()\n",
+    "    elbo.natural_backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    if epoch > 0:\n",
+    "        elbos.append(float(elbo) / len(X))\n",
+    "\n",
+    "# Plot the ELBO.\n",
+    "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
+    "              y_axis_label='ln p(X)')\n",
+    "fig.line(np.arange(len(elbos)), elbos, color='blue')\n",
+    "\n",
+    "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 10_000\n",
+    "\n",
+    "params = model.latent_model.grouped_parameters\n",
+    "optimizer = beer.BayesianModelCoordinateAscentOptimizer(*params, lrate=lrate_bayesmodel, \n",
+    "    std_optim=std_optimizer)\n",
+    "\n",
+    "elbos = []\n",
+    "for epoch in range(epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), labels=targets, nsamples=5, kl_weight=1.)\n",
     "    elbo.backward()\n",
     "    elbo.natural_backward()\n",
     "    optimizer.step()\n",
@@ -321,32 +362,6 @@
     "\n",
     "grid = gridplot([[fig1, fig2]])\n",
     "show(grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.normal.cov"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = figure(title='Data', width=400, height=400)\n",
-    "colors = ['salmon', 'blue', 'green', 'yellow', 'black', 'red', 'cyan', 'purple', 'brown', 'pink']\n",
-    "for sX, color in zip(Xs, colors):\n",
-    "    fig.circle(sX[:, 0], sX[:, 1], color=color)\n",
-    "    \n",
-    "mean = model.normal.mean.numpy()\n",
-    "cov = model.normal.cov.numpy()\n",
-    "plotting.plot_normal(fig, mean, cov, alpha=.5)\n",
-    "show(fig)"
    ]
   }
  ],
