Refactored model creation for Mixture,PPCA,PLDA.

--- a/examples/PPCA.ipynb
+++ b/examples/PPCA.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Add \"beer\" to the PYTHONPATH\n",
@@ -52,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "mean = np.array([-10, 10]) \n",
@@ -86,15 +90,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "ppca = beer.PPCA.create(torch.zeros(2).double(), 1, torch.eye(1, 2).double())\n",
-    "normal_diag = beer.NormalDiagonalCovariance.create(torch.zeros(2).double(), torch.ones(1).double())\n",
-    "normal_full = beer.NormalFullCovariance.create(torch.zeros(2).double(), torch.eye(2).double())\n",
+    "data_mean = torch.from_numpy(data.mean(axis=0)).float()\n",
+    "data_var = torch.from_numpy(data.var(axis=0)).float()\n",
     "\n",
-    "models = [ppca, normal_diag, normal_full]\n",
-    "parameters = ppca.parameters + normal_diag.parameters + normal_full.parameters"
+    "conf = {\n",
+    "    'type': 'PPCA',\n",
+    "    'dim_subspace': 1,\n",
+    "    'prior_strength': 1.,\n",
+    "    'noise_std': 0.1\n",
+    "}\n",
+    "ppca = beer.create_model(conf, data_mean, data_var)"
    ]
   },
   {
@@ -108,29 +118,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "epochs = 30\n",
+    "epochs = 100\n",
     "lrate = 1\n",
-    "X = torch.from_numpy(data).double()\n",
-    "optim = beer.BayesianModelOptimizer(parameters)\n",
+    "X = torch.from_numpy(data).float()\n",
+    "optim = beer.BayesianModelOptimizer(ppca.parameters)\n",
     "    \n",
-    "elbos = [[], [], []]\n",
-    "klds = []\n",
+    "elbos = []\n",
     "for epoch in range(epochs):\n",
     "    optim.zero_grad()\n",
-    "    for i, model in enumerate(models):\n",
-    "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X))\n",
-    "        elbo.natural_backward()\n",
-    "        elbos[i].append(round(float(elbo) / len(X), 5))\n",
+    "    elbo = beer.evidence_lower_bound(ppca, X, datasize=len(X))\n",
+    "    elbo.natural_backward()\n",
+    "    elbos.append(round(float(elbo) / len(X), 5))\n",
     "    optim.step()\n",
     "    \n",
     "fig = figure(width=400, height=400)\n",
-    "fig.line(range(epochs), elbos[0], color='blue')\n",
-    "fig.line(range(epochs), elbos[1], color='green')\n",
-    "fig.line(range(epochs), elbos[2], color='red')\n",
+    "fig.line(range(epochs), elbos, color='blue')\n",
     "show(fig)"
    ]
   },
@@ -145,7 +151,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
