--- a/examples/Mixture Model.ipynb
+++ b/examples/Mixture Model.ipynb
@@ -54,13 +54,13 @@
    "outputs": [],
    "source": [
     "# First cluster.\n",
-    "mean = np.array([-1.5, 4]) \n",
-    "cov = np.array([[.75, 0], [0, 2.]])\n",
+    "mean = np.array([-5, 5]) \n",
+    "cov = .5 *np.array([[.75, .5], [.5, 2.]])\n",
     "data1 = np.random.multivariate_normal(mean, cov, size=200)\n",
     "\n",
     "# Second cluster.\n",
     "mean = np.array([5, 5]) \n",
-    "cov = np.array([[2, 1], [1, .75]])\n",
+    "cov = 2 * np.array([[2, -.5], [-.5, .75]])\n",
     "data2 = np.random.multivariate_normal(mean, cov, size=200)\n",
     "\n",
     "# Merge everything to get the finale data set.\n",
@@ -104,51 +104,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ncomp = 10 \n",
-    "\n",
+    "confs = {\n",
+    "    'gmm_iso': {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'NormalSet',\n",
+    "            'size': 2,\n",
+    "            'covariance': 'isotropic',\n",
+    "            'shared_covariance': False,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 1.\n",
+    "        }\n",
+    "    },   \n",
+    "    'gmm_diag': {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'NormalSet',\n",
+    "            'size': 2,\n",
+    "            'covariance': 'diagonal',\n",
+    "            'shared_covariance': False,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 1.\n",
+    "        }\n",
+    "    }, \n",
+    "    'gmm_full': {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'NormalSet',\n",
+    "            'size': 2,\n",
+    "            'covariance': 'full',\n",
+    "            'shared_covariance': False,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 1.\n",
+    "        }\n",
+    "    }, \n",
+    "    'gmm_iso_shared': {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'NormalSet',\n",
+    "            'size': 2,\n",
+    "            'covariance': 'isotropic',\n",
+    "            'shared_covariance': True,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 1.\n",
+    "        }\n",
+    "    },   \n",
+    "    'gmm_diag_shared': {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'NormalSet',\n",
+    "            'size': 2,\n",
+    "            'covariance': 'diagonal',\n",
+    "            'shared_covariance': True,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 1.\n",
+    "        }\n",
+    "    }, \n",
+    "    'gmm_full_shared': {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'NormalSet',\n",
+    "            'size': 2,\n",
+    "            'covariance': 'full',\n",
+    "            'shared_covariance': True,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 1.\n",
+    "        }\n",
+    "    }, \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# We use the global mean/cov. matrix of the data to initialize the mixture.\n",
-    "#p_mean = torch.from_numpy(data.mean(axis=0)).float()\n",
-    "#p_cov = torch.from_numpy(np.cov(data.T)).float()\n",
-    "p_mean = torch.zeros(2)\n",
-    "p_cov = torch.eye(2)\n",
+    "data_mean = torch.from_numpy(data.mean(axis=0)).float()\n",
+    "data_var = torch.from_numpy(np.var(data, axis=0)).float()\n",
     "\n",
-    "# Mean of the weights' prior.\n",
-    "weights = torch.ones(ncomp) / ncomp\n",
-    "\n",
-    "# GMM (isotropic cov).\n",
-    "normalset = beer.NormalIsotropicCovarianceSet.create(p_mean, torch.diag(p_cov).sum(), \n",
-    "                                                     ncomp, noise_std=0.1)\n",
-    "gmm_iso = beer.Mixture.create(weights, normalset)\n",
-    "\n",
-    "# GMM (diag cov).\n",
-    "normalset = beer.NormalDiagonalCovarianceSet.create(p_mean, torch.diag(p_cov), \n",
-    "                                                    ncomp, noise_std=0.1)\n",
-    "gmm_diag = beer.Mixture.create(weights, normalset)\n",
-    "\n",
-    "# GMM (full cov).\n",
-    "normalset = beer.NormalFullCovarianceSet.create(p_mean, p_cov, ncomp, \n",
-    "                                                noise_std=0.1)\n",
-    "gmm_full = beer.Mixture.create(weights, normalset)\n",
-    "\n",
-    "# GMM shared (full) cov.\n",
-    "normalset = beer.NormalSetSharedDiagonalCovariance.create(p_mean, \n",
-    "                                                        torch.diag(p_cov), \n",
-    "                                                        ncomp,\n",
-    "                                                        noise_std=0.1)\n",
-    "gmm_sharedcov_diag = beer.Mixture.create(weights, normalset)\n",
-    "\n",
-    "# GMM shared (full) cov.\n",
-    "normalset = beer.NormalSetSharedFullCovariance.create(p_mean, p_cov, ncomp,\n",
-    "                                                      noise_std=0.1)\n",
-    "gmm_sharedcov_full = beer.Mixture.create(weights, normalset)\n",
-    "\n",
-    "models = [\n",
-    "    gmm_iso,\n",
-    "    gmm_diag, \n",
-    "    gmm_full,\n",
-    "    gmm_sharedcov_diag,\n",
-    "    gmm_sharedcov_full\n",
-    "]"
+    "models = {}\n",
+    "for model_name, conf in confs.items():\n",
+    "    models[model_name] = beer.create_model(conf, data_mean, data_var)"
    ]
   },
   {
@@ -168,31 +212,52 @@
     "lrate = 1.\n",
     "X = torch.from_numpy(data).float()\n",
     "params = []\n",
-    "for model in models:\n",
+    "for model_name, model in models.items():\n",
     "    params += model.parameters\n",
     "optimizer = beer.BayesianModelOptimizer(params, lrate)\n",
     "    \n",
-    "elbos = [[] for model in models]\n",
+    "elbos = {model_name: [] for model_name in models}\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
-    "    for i, model in enumerate(models):\n",
+    "    for model_name, model in models.items():\n",
     "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X))\n",
     "        elbo.natural_backward()\n",
-    "        if epoch > 0:\n",
-    "            elbos[i].append(float(elbo) / len(X))\n",
-    "    optimizer.step()\n",
-    "\n",
+    "        elbos[model_name].append(float(elbo) / len(X))\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = {\n",
+    "    'gmm_iso': 'green',\n",
+    "    'gmm_diag': 'blue',\n",
+    "    'gmm_full': 'red',\n",
+    "    'gmm_iso_shared': 'grey',\n",
+    "    'gmm_diag_shared': 'brown',\n",
+    "    'gmm_full_shared': 'black'\n",
+    "    \n",
+    "}\n",
     "# Plot the ELBO.\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
     "              y_axis_label='ln p(X)')\n",
-    "fig.line(range(1, epochs), elbos[0], legend='GMM (iso)', color='orange')\n",
-    "fig.line(range(1, epochs), elbos[1], legend='GMM (diag)', color='blue')\n",
-    "fig.line(range(1, epochs), elbos[2], legend='GMM (full)', color='red')\n",
-    "fig.line(range(1, epochs), elbos[3], legend='GMM (shared cov. diag)', color='green')\n",
-    "fig.line(range(1, epochs), elbos[4], legend='GMM (shared cov. full)', color='black')\n",
+    "for model_name, elbo in elbos.items():\n",
+    "    fig.line(range(len(elbo)), elbo, legend=model_name, color=colors[model_name])\n",
     "fig.legend.location = 'bottom_right'\n",
     "\n",
     "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models['gmm_iso_shared'].modelset[0].cov"
    ]
   },
   {
@@ -203,32 +268,17 @@
    },
    "outputs": [],
    "source": [
-    "fig0 = figure(title='GMM (iso)', x_range=global_range, y_range=global_range,\n",
-    "              width=400, height=400)\n",
-    "fig0.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "plotting.plot_gmm(fig0, gmm_iso, alpha=.5, color='orange')\n",
-    "\n",
-    "fig1 = figure(title='GMM (diag)', x_range=global_range, y_range=global_range,\n",
-    "              width=400, height=400)\n",
-    "fig1.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "plotting.plot_gmm(fig1, gmm_diag, alpha=.5, color='blue')\n",
-    "\n",
-    "fig2 = figure(title='GMM (full)', x_range=global_range, y_range=global_range,\n",
-    "              width=400, height=400)\n",
-    "fig2.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "plotting.plot_gmm(fig2, gmm_full, alpha=.5, color='red')\n",
-    "\n",
-    "fig3 = figure(title='GMM (shared cov. full)', x_range=global_range, y_range=global_range,\n",
-    "              width=400, height=400)\n",
-    "fig3.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "plotting.plot_gmm(fig3, gmm_sharedcov_diag, alpha=.5, color='green')\n",
-    "\n",
-    "fig4 = figure(title='GMM (shared cov. full)', x_range=global_range, y_range=global_range,\n",
-    "              width=400, height=400)\n",
-    "fig4.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "plotting.plot_gmm(fig4, gmm_sharedcov_full, alpha=.5, color='black')\n",
-    "\n",
-    "grid = gridplot([[fig0, fig1], [fig2, fig3], [fig4]])\n",
+    "figs = []\n",
+    "for i, model_name in enumerate(models):\n",
+    "    model = models[model_name]\n",
+    "    fig = figure(title=model_name, x_range=global_range, y_range=global_range,\n",
+    "              width=300, height=300)\n",
+    "    fig.circle(data[:, 0], data[:, 1], alpha=.1)\n",
+    "    plotting.plot_gmm(fig, model, alpha=.5, color=colors[model_name])\n",
+    "    if i % 3 == 0:\n",
+    "        figs.append([])\n",
+    "    figs[-1].append(fig)\n",
+    "grid = gridplot(figs)\n",
     "show(grid)"
    ]
   }
