--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -122,30 +122,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of components in the mixture.\n",
-    "ncomps = ntargets\n",
+    "conf = {\n",
+    "    'type': 'Mixture',\n",
+    "    'prior_strength': 1.,\n",
+    "    'components': {\n",
+    "        'type': 'PLDASet',\n",
+    "        'size': 10,\n",
+    "        'dim_noise_subspace': 1,\n",
+    "        'dim_class_subspace': 1,\n",
+    "        'prior_strength': 1.,\n",
+    "        'noise_std': 1.\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "# Dimension of the observed space.\n",
-    "obs_dim = data.shape[1]\n",
-    "\n",
-    "# Dimension of the noise subspace.\n",
-    "noise_s_dim = obs_dim - 1\n",
-    "\n",
-    "# Dimension of the class subspace.\n",
-    "class_s_dim = 10\n",
-    "\n",
-    "# Mean of the prior distributions.\n",
-    "mean = torch.from_numpy(data.mean(axis=0)).double()\n",
-    "prec = 1.\n",
-    "noise_s = torch.zeros(noise_s_dim, obs_dim).double()\n",
-    "class_s = torch.zeros(class_s_dim, obs_dim).double()\n",
-    "means = torch.zeros(ncomps, class_s_dim).double()\n",
-    "weights = torch.ones(ncomps).double() / ntargets\n",
-    "pseudo_counts = 1.\n",
-    "\n",
-    "pldaset = beer.PLDASet.create(mean, prec, noise_s, class_s, means, \n",
-    "                              pseudo_counts, noise_std=0.1)\n",
-    "plda = beer.Mixture.create(weights, pldaset)"
+    "        \n",
+    "# We use the global mean/cov. matrix of the data to initialize the mixture.\n",
+    "data_mean = torch.from_numpy(data.mean(axis=0)).double()\n",
+    "data_var = torch.from_numpy(np.var(data, axis=0)).double()\n",
+    "        \n",
+    "plda = beer.create_model(conf, data_mean, data_var).double()"
    ]
   },
   {
@@ -165,8 +160,7 @@
    "source": [
     "epochs = 100\n",
     "lrate = 1.\n",
-    "plda = plda.float()\n",
-    "X = torch.from_numpy(data).float()\n",
+    "X = torch.from_numpy(data).double()\n",
     "targets = torch.from_numpy(labels).long()\n",
     "optimizer = beer.BayesianModelCoordinateAscentOptimizer(\n",
     "    *plda.grouped_parameters, \n",
