Added basic NeuralNetwork architecture + standard creation for the VAE.

--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -121,6 +121,8 @@
     "np.random.shuffle(idxs)\n",
     "data = np.vstack(Xs)[idxs]\n",
     "labels = np.hstack(labels)[idxs]\n",
+    "data = (data - data.mean(axis=0)) / np.sqrt(data.var(axis=0))\n",
+    "\n",
     "\n",
     "test_data = data[-100:]\n",
     "test_labels = labels[-100:]\n",
@@ -133,6 +135,15 @@
     "for sX, color in zip(Xs, colors):\n",
     "    fig.circle(sX[:, 0], sX[:, 1], color=color)\n",
     "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.mean(axis=0), data.var(axis=0)"
    ]
   },
   {
@@ -153,6 +164,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_mean = torch.from_numpy(data.mean(axis=0)).float()\n",
+    "data_var = torch.from_numpy(np.var(data, axis=0)).float()\n",
+    "\n",
+    "\n",
     "# Dimension of the observed space.\n",
     "obs_dim = data.shape[1]\n",
     "\n",
@@ -165,87 +180,59 @@
     "# Number of units per hidden-layer.\n",
     "n_units = 20\n",
     "\n",
-    "class Encoder(nn.Module):\n",
-    "    def __init__(self, seq, hidden_dim, out_dim):\n",
-    "        super().__init__()\n",
-    "        self.seq = seq\n",
-    "        self.h2mean = nn.Linear(hidden_dim, out_dim)\n",
-    "        self.h2logvar = nn.Linear(hidden_dim, 1)\n",
-    "        self.out_dim = out_dim\n",
-    "        \n",
-    "    def forward(self, X):\n",
-    "        h = self.seq(X)\n",
-    "        mean = self.h2mean(h)\n",
-    "        logvar = self.h2logvar(h)\n",
-    "        return mean, logvar.exp() * torch.ones(1, self.out_dim, dtype=X.dtype)\n",
-    "    \n",
-    "class Decoder(nn.Module):\n",
-    "    def __init__(self, seq, hidden_dim, out_dim):\n",
-    "        super().__init__()\n",
-    "        self.seq = seq\n",
-    "        self.h2mean = nn.Linear(hidden_dim, out_dim)\n",
-    "        \n",
-    "    def forward(self, X):\n",
-    "        h = self.seq(X)\n",
-    "        mean = self.h2mean(h)\n",
-    "        return mean\n",
-    "\n",
-    "# Neural network structure of the encoder/decoder of the model.\n",
-    "enc_struct = nn.Sequential(\n",
-    "    nn.Linear(obs_dim, n_units),\n",
-    "    nn.Tanh(),\n",
-    "    nn.Linear(n_units, n_units),\n",
-    "    nn.Tanh(),\n",
-    ")\n",
-    "\n",
-    "dec_struct = nn.Sequential(\n",
-    "    nn.Linear(obs_dim, n_units),\n",
-    "    nn.Tanh(),\n",
-    "    nn.Linear(n_units, n_units),\n",
-    "    nn.Tanh(),\n",
-    ")\n",
-    "\n",
-    "# Model of the latent space.\n",
-    "# We use Mixture of normal with diagonal cov. It can be changed\n",
-    "# to other model.\n",
-    "# ----------------------------------------------------------------------\n",
-    "\n",
-    "# Number of components in the mixture.\n",
-    "ncomps = ntargets\n",
-    "\n",
-    "# Dimension of the observed space.\n",
-    "obs_dim = data.shape[1]\n",
-    "\n",
-    "# Dimension of the noise subspace.\n",
-    "noise_s_dim = 1\n",
-    "\n",
-    "# Dimension of the class subspace.\n",
-    "class_s_dim = 1\n",
-    "\n",
-    "# Mean of the prior distributions.\n",
-    "mean = torch.zeros(obs_dim)\n",
-    "prec = 1.\n",
-    "noise_s = torch.zeros(noise_s_dim, obs_dim)\n",
-    "class_s = torch.zeros(class_s_dim, obs_dim)\n",
-    "means = torch.zeros(ncomps, class_s_dim)\n",
-    "weights = torch.ones(ncomps) / ntargets\n",
-    "pseudo_counts = 1.\n",
-    "\n",
-    "pldaset = beer.PLDASet.create(mean, prec, noise_s, class_s, means, \n",
-    "                              pseudo_counts, noise_std=0.1)\n",
-    "plda = beer.Mixture.create(weights, pldaset)\n",
-    "\n",
-    "# ----------------------------------------------------------------------\n",
+    "llh_model_conf = {\n",
+    "    'type': 'Normal',\n",
+    "    'covariance': 'isotropic',\n",
+    "    'prior_strength': 1.,\n",
+    "    'noise_std': 0,\n",
+    "}\n",
     "\n",
     "# Putting everything together to build the SVAE.\n",
-    "model = beer.VAEGlobalMeanIsotropicCovariance.create(\n",
-    "    torch.from_numpy(data.mean(axis=0)).float(),\n",
-    "    torch.from_numpy(data.var(axis=0)).sum().float(),\n",
-    "    Encoder(enc_struct, n_units, latent_dim), \n",
-    "    Decoder(dec_struct, n_units, obs_dim),\n",
-    "    plda,\n",
-    "    pseudo_counts=1.\n",
-    ")"
+    "model = beer.create_model({\n",
+    "    'type': 'NonLinearSubspaceModel',\n",
+    "    'normal_model': llh_model_conf,\n",
+    "    'encoder': \n",
+    "    {\n",
+    "        'type': 'FeedForwardEncoder',\n",
+    "        'dim_in': obs_dim,\n",
+    "        'dim_out': latent_dim,\n",
+    "        'dim_hlayer': n_units,\n",
+    "        'n_layer': 2,\n",
+    "        'non_linearity': 'tanh',\n",
+    "        'covariance': 'isotropic'\n",
+    "    },\n",
+    "    'decoder':\n",
+    "    {\n",
+    "        'type': 'FeedForwardDecoder',\n",
+    "        'dim_in': latent_dim,\n",
+    "        'dim_out': obs_dim,\n",
+    "        'dim_hlayer': n_units,\n",
+    "        'n_layer': 1,\n",
+    "        'non_linearity': 'tanh',\n",
+    "    },\n",
+    "    'latent_model':\n",
+    "    {\n",
+    "        'type': 'Mixture',\n",
+    "        'prior_strength': 1.,\n",
+    "        'components': {\n",
+    "            'type': 'PLDASet',\n",
+    "            'size': ntargets,\n",
+    "            'dim_noise_subspace': 1,\n",
+    "            'dim_class_subspace': 1,\n",
+    "            'prior_strength': 1.,\n",
+    "            'noise_std': 0.1\n",
+    "        }\n",
+    "    }\n",
+    "}, data_mean, .01 * data_var).double()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.encoder"
    ]
   },
   {
@@ -273,14 +260,17 @@
     "\n",
     "nnet_parameters = list(model.encoder.parameters()) + list(model.decoder.parameters())\n",
     "std_optimizer = torch.optim.Adam(nnet_parameters, lr=lrate_encoder, weight_decay=1e-2)\n",
-    "params = model.grouped_parameters\n",
-    "optimizer = beer.BayesianModelCoordinateAscentOptimizer(*params, lrate=lrate_bayesmodel, \n",
+    "optimizer = beer.BayesianModelCoordinateAscentOptimizer(\n",
+    "    *model.normal.grouped_parameters, \n",
+    "    *model.latent_model.grouped_parameters,\n",
+    "    lrate=lrate_bayesmodel, \n",
     "    std_optim=std_optimizer)\n",
     "    \n",
     "elbos = []\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
-    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), labels=targets, nsamples=5, kl_weight=0)\n",
+    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), \n",
+    "                                     labels=targets, nsamples=1, kl_weight=.1)\n",
     "    elbo.backward()\n",
     "    elbo.natural_backward()\n",
     "    optimizer.step()\n",
@@ -311,8 +301,11 @@
    "source": [
     "epochs = 10_000\n",
     "\n",
-    "params = model.latent_model.grouped_parameters\n",
-    "optimizer = beer.BayesianModelCoordinateAscentOptimizer(*params, lrate=lrate_bayesmodel, \n",
+    "params = model.grouped_parameters\n",
+    "optimizer = beer.BayesianModelCoordinateAscentOptimizer(\n",
+    "    *model.normal.grouped_parameters,\n",
+    "    *model.latent_model.grouped_parameters,\n",
+    "    lrate=lrate_bayesmodel, \n",
     "    std_optim=std_optimizer)\n",
     "\n",
     "elbos = []\n",
@@ -360,6 +353,7 @@
     "for sX, color in zip(Xs, colors):\n",
     "    fig2.circle(sX[:, 0], sX[:, 1], color=color)\n",
     "\n",
+    "plotting.plot_normal(fig2, model.normal.mean.numpy(), model.normal.cov.numpy(), alpha=.5)\n",
     "grid = gridplot([[fig1, fig2]])\n",
     "show(grid)"
    ]
