Change the prior of the subspaces (noise/class) to zero.

--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "ntargets = 3\n",
-    "N = 100\n",
+    "N = 200\n",
     "Xs = []\n",
     "labels = []\n",
     "cov = np.array([\n",
@@ -119,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "conf = {\n",
@@ -129,7 +131,7 @@
     "        'type': 'PLDASet',\n",
     "        'size': 10,\n",
     "        'dim_noise_subspace': 1,\n",
-    "        'dim_class_subspace': 1,\n",
+    "        'dim_class_subspace': 3,\n",
     "        'prior_strength': 1.,\n",
     "        'noise_std': 1.\n",
     "    }\n",
@@ -141,6 +143,15 @@
     "data_var = torch.from_numpy(np.var(data, axis=0)).double()\n",
     "        \n",
     "plda = beer.create_model(conf, data_mean, data_var).double()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plda.modelset.class_subspace_param.prior.expected_sufficient_statistics"
    ]
   },
   {
