Cleaned up the notebooks.

--- a/examples/Nested Mixture Model.ipynb
+++ b/examples/Nested Mixture Model.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bayesian Mixture Model\n",
+    "# Bayesian Nested Mixture Model\n",
     "\n",
-    "This notebook illustrate how to build and train a Bayesian Mixture Model with the [beer framework](https://github.com/beer-asr/beer)."
+    "This notebook illustrate how to build and train a Bayesian Nested Mixture Model with the [beer framework](https://github.com/beer-asr/beer)."
    ]
   },
   {
@@ -65,7 +65,11 @@
     "\n",
     "# Merge everything to get the finale data set.\n",
     "data = np.vstack([data1, data2])\n",
-    "np.random.shuffle(data)"
+    "np.random.shuffle(data)\n",
+    "\n",
+    "# We use the global mean/cov. matrix of the data to initialize the mixture.\n",
+    "data_mean = torch.from_numpy(data.mean(axis=0)).float()\n",
+    "data_var = torch.from_numpy(np.var(data, axis=0)).float()"
    ]
   },
   {
@@ -104,95 +108,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confs = {\n",
-    "    'gmm_iso': {\n",
-    "        'type': 'Mixture',\n",
-    "        'prior_strength': 1.,\n",
-    "        'components': {\n",
-    "            'type': 'NormalSet',\n",
-    "            'size': 2,\n",
-    "            'covariance': 'isotropic',\n",
-    "            'shared_covariance': False,\n",
-    "            'prior_strength': 1.,\n",
-    "            'noise_std': 1.\n",
-    "        }\n",
-    "    },   \n",
-    "    'gmm_diag': {\n",
-    "        'type': 'Mixture',\n",
-    "        'prior_strength': 1.,\n",
-    "        'components': {\n",
-    "            'type': 'NormalSet',\n",
-    "            'size': 2,\n",
-    "            'covariance': 'diagonal',\n",
-    "            'shared_covariance': False,\n",
-    "            'prior_strength': 1.,\n",
-    "            'noise_std': 1.\n",
-    "        }\n",
-    "    }, \n",
-    "    'gmm_full': {\n",
-    "        'type': 'Mixture',\n",
-    "        'prior_strength': 1.,\n",
-    "        'components': {\n",
-    "            'type': 'NormalSet',\n",
-    "            'size': 2,\n",
-    "            'covariance': 'full',\n",
-    "            'shared_covariance': False,\n",
-    "            'prior_strength': 1.,\n",
-    "            'noise_std': 1.\n",
-    "        }\n",
-    "    }, \n",
-    "    'gmm_iso_shared': {\n",
-    "        'type': 'Mixture',\n",
-    "        'prior_strength': 1.,\n",
-    "        'components': {\n",
-    "            'type': 'NormalSet',\n",
-    "            'size': 2,\n",
-    "            'covariance': 'isotropic',\n",
-    "            'shared_covariance': True,\n",
-    "            'prior_strength': 1.,\n",
-    "            'noise_std': 1.\n",
-    "        }\n",
-    "    },   \n",
-    "    'gmm_diag_shared': {\n",
-    "        'type': 'Mixture',\n",
-    "        'prior_strength': 1.,\n",
-    "        'components': {\n",
-    "            'type': 'NormalSet',\n",
-    "            'size': 2,\n",
-    "            'covariance': 'diagonal',\n",
-    "            'shared_covariance': True,\n",
-    "            'prior_strength': 1.,\n",
-    "            'noise_std': 1.\n",
-    "        }\n",
-    "    }, \n",
-    "    'gmm_full_shared': {\n",
-    "        'type': 'Mixture',\n",
-    "        'prior_strength': 1.,\n",
-    "        'components': {\n",
-    "            'type': 'NormalSet',\n",
-    "            'size': 2,\n",
-    "            'covariance': 'full',\n",
-    "            'shared_covariance': True,\n",
-    "            'prior_strength': 1.,\n",
-    "            'noise_std': 1.\n",
-    "        }\n",
-    "    }, \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We use the global mean/cov. matrix of the data to initialize the mixture.\n",
-    "data_mean = torch.from_numpy(data.mean(axis=0)).float()\n",
-    "data_var = torch.from_numpy(np.var(data, axis=0)).float()\n",
+    "conf_template = '''\n",
+    "type: Mixture\n",
+    "prior_strength: 1.\n",
+    "components:\n",
+    "    type: MixtureSet\n",
+    "    size: {size}\n",
+    "    prior_strength: 1.\n",
+    "    components: \n",
+    "        type: NormalSet\n",
+    "        size: 1\n",
+    "        covariance: {cov_type}\n",
+    "        shared_covariance: {shared_cov}\n",
+    "        prior_strength: 1.e-1\n",
+    "        noise_std: .5\n",
+    "'''\n",
     "\n",
-    "models = {}\n",
-    "for model_name, conf in confs.items():\n",
-    "    models[model_name] = beer.create_model(conf, data_mean, data_var)"
+    "confs = [\n",
+    "    conf_template.format(size=2, cov_type='isotropic', shared_cov=False),\n",
+    "    conf_template.format(size=2, cov_type='diagonal', shared_cov=False),\n",
+    "    conf_template.format(size=2, cov_type='full', shared_cov=False),\n",
+    "    conf_template.format(size=2, cov_type='isotropic', shared_cov=True),\n",
+    "    conf_template.format(size=2, cov_type='diagonal', shared_cov=True),\n",
+    "    conf_template.format(size=2, cov_type='full', shared_cov=True)\n",
+    "]\n",
+    "\n",
+    "names = [\n",
+    "    'm_gmm_iso', \n",
+    "    'm_gmm_diag', \n",
+    "    'm_gmm_full', \n",
+    "    'm_gmm_iso_shared', \n",
+    "    'm_gmm_diag_shared', \n",
+    "    'm_gmm_full_shared'\n",
+    "]\n",
+    "\n",
+    "import yaml\n",
+    "models = {\n",
+    "    name: beer.create_model(yaml.load(conf), data_mean, .1 * data_var)\n",
+    "    for name, conf in zip(names, confs)\n",
+    "}"
    ]
   },
   {
@@ -223,8 +177,7 @@
     "    model_name: [] \n",
     "    for model_name in models\n",
     "}  \n",
-    "\n",
-    "\n",
+    "    \n",
     "for epoch in range(epochs):\n",
     "    for name, model in models.items():\n",
     "        optim = optims[name]\n",
@@ -242,13 +195,12 @@
    "outputs": [],
    "source": [
     "colors = {\n",
-    "    'gmm_iso': 'green',\n",
-    "    'gmm_diag': 'blue',\n",
-    "    'gmm_full': 'red',\n",
-    "    'gmm_iso_shared': 'grey',\n",
-    "    'gmm_diag_shared': 'brown',\n",
-    "    'gmm_full_shared': 'black'\n",
-    "    \n",
+    "    'm_gmm_iso': 'green',\n",
+    "    'm_gmm_diag': 'blue',\n",
+    "    'm_gmm_full': 'red',\n",
+    "    'm_gmm_iso_shared': 'grey',\n",
+    "    'm_gmm_diag_shared': 'brown',\n",
+    "    'm_gmm_full_shared': 'black'\n",
     "}\n",
     "# Plot the ELBO.\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
@@ -270,11 +222,12 @@
    "source": [
     "figs = []\n",
     "for i, model_name in enumerate(models):\n",
-    "    model = models[model_name]\n",
     "    fig = figure(title=model_name, x_range=global_range, y_range=global_range,\n",
-    "              width=300, height=300)\n",
-    "    fig.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "    plotting.plot_gmm(fig, model, alpha=.5, color=colors[model_name])\n",
+    "                  width=300, height=300)\n",
+    "    model = models[model_name]\n",
+    "    for gmm in model.modelset:\n",
+    "        fig.circle(data[:, 0], data[:, 1], alpha=.1)\n",
+    "        plotting.plot_gmm(fig, gmm, alpha=.5)\n",
     "    if i % 3 == 0:\n",
     "        figs.append([])\n",
     "    figs[-1].append(fig)\n",
