--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -73,7 +73,8 @@
     "    X1 = np.zeros_like(Z1)\n",
     "    X1[:, 0] = Z1[:, 0]\n",
     "    X1[:, 1] = Z1[:, 1] + (Z1[:, 0]-mean[0])** 2\n",
-    "    labels.append(np.ones(len(X1)) * i)\n",
+    "    labels.append(np.ones(len(X1)//2) * i)\n",
+    "    labels.append(np.ones(len(X1) // 2) * -1)\n",
     "    Xs.append(X1)\n",
     "\n",
     "idxs = np.arange(0, ntargets * N)\n",
@@ -132,8 +133,7 @@
     "    width: 20\n",
     "encoder:\n",
     "  nnet_structure:\n",
-    "  - residual: false\n",
-    "    block_structure:\n",
+    "  - block_structure:\n",
     "    - Linear:in_features=<feadim>;out_features=20\n",
     "    - Softplus\n",
     "    - Linear:in_features=20;out_features=20\n",
@@ -146,8 +146,7 @@
     "    dim_out: 2\n",
     "decoder:\n",
     "  nnet_structure:\n",
-    "  - residual: false\n",
-    "    block_structure:\n",
+    "  - block_structure:\n",
     "    - Linear:in_features=2;out_features=20\n",
     "    - Softplus\n",
     "    - Linear:in_features=20;out_features=20\n",
@@ -261,8 +260,8 @@
    "outputs": [],
    "source": [
     "npoints = N * ntargets\n",
-    "epochs = 10_000\n",
-    "lrate_bayesmodel = 1.\n",
+    "epochs = 2_000\n",
+    "lrate_bayesmodel = .1\n",
     "lrate_encoder = 1e-3\n",
     "X = torch.from_numpy(data[:npoints]).float()\n",
     "targets = torch.from_numpy(labels[:npoints]).long()\n",
@@ -301,6 +300,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot the ELBO.\n",
+    "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
+    "              y_axis_label='ln p(X)')\n",
+    "fig.line(np.arange(len(elbos)), elbos, color='blue')\n",
+    "\n",
+    "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig1 = figure(width=400, height=400)\n",
     "fig2 = figure(width=400, height=400)\n",
     "for class_X, color in zip(Xs, colors):\n",
@@ -314,13 +327,20 @@
     "    fig1.circle(class_X[:, 0], class_X[:, 1], alpha=.5, color=color)\n",
     "    fig1.cross(r_class_X[:, 0], r_class_X[:, 1], color=color)\n",
     "    fig2.circle(samples[:, 0], samples[:, 1], color=color)\n",
-    "    \n",
+    "        \n",
     "plotting.plot_normal(fig1, model.normal.mean.numpy(), \n",
     "                     model.normal.cov.numpy(), alpha=.5)\n",
     "plotting.plot_gmm(fig2, model.latent_model, colors=colors, alpha=.5, color='blue')\n",
     "#show(fig1)\n",
     "show(gridplot([[fig1, fig2]]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
