--- a/examples/VAE.ipynb
+++ b/examples/VAE.ipynb
@@ -111,6 +111,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "latent_space_dim = 2\n",
+    "\n",
+    "# Shared full covariance.\n",
+    "modelset = beer.NormalSet.create(\n",
+    "    torch.zeros(latent_space_dim), \n",
+    "    torch.ones(latent_space_dim), size=2,\n",
+    "                                 prior_strength=1., noise_std=1.,\n",
+    "                                 cov_type='full', shared_cov=True)\n",
+    "gmm_full_shared = beer.Mixture.create(modelset, prior_strength=1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vae_conf_str = '''\n",
     "type: VAE\n",
     "llh_type: normal\n",
