--- a/examples/Normal.ipynb
+++ b/examples/Normal.ipynb
@@ -55,7 +55,8 @@
     "    [4, 1.5],\n",
     "    [1.5, 1]\n",
     "])\n",
-    "data = np.random.multivariate_normal(mean, cov, size=100)\n",
+    "cov = np.eye(2)\n",
+    "data = np.random.multivariate_normal(mean, cov, size=1000)\n",
     "\n",
     "fig = figure(\n",
     "    title='Data',\n",
