Updated the model type conversion (float/double/device) and added ConstantParameters.

--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -174,12 +174,12 @@
     "\n",
     "\n",
     "models = {\n",
-    "    'hmm_iso': hmm_iso,\n",
-    "    'hmm_diag': hmm_diag, \n",
-    "    'hmm_full': hmm_full,\n",
-    "    'hmm_shared_iso': hmm_shared_iso,\n",
-    "    'hmm_shared_diag': hmm_shared_diag,\n",
-    "    'hmm_shared_full': hmm_shared_full\n",
+    "    'hmm_iso': hmm_iso.double(),\n",
+    "    'hmm_diag': hmm_diag.double(), \n",
+    "    'hmm_full': hmm_full.double(),\n",
+    "    'hmm_shared_iso': hmm_shared_iso.double(),\n",
+    "    'hmm_shared_diag': hmm_shared_diag.double(),\n",
+    "    'hmm_shared_full': hmm_shared_full.double()\n",
     "}"
    ]
   },
@@ -198,7 +198,7 @@
    "source": [
     "epochs = 100\n",
     "lrate = 1.\n",
-    "X = torch.from_numpy(data).float()\n",
+    "X = torch.from_numpy(data).double()\n",
     "\n",
     "optims = {\n",
     "    model_name: beer.BayesianModelCoordinateAscentOptimizer(model.mean_field_groups, lrate)\n",
