HMM alignment working again.

--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nsamples = 100\n",
+    "nsamples = 200\n",
     "ndim = 2\n",
     "nstates = 3\n",
     "trans_mat = np.array([[.5, .5, 0], [0, .5, .5], [.5, 0, .5]])\n",
@@ -120,6 +120,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'beer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4b962b667d92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbeer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munit_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpdf_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ms2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munit_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpdf_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0ms3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munit_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpdf_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_arc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'beer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "graph = beer.graph.Graph()\n",
+    "s1 = graph.add_state(unit_id=0, pdf_id=0)\n",
+    "s2 = graph.add_state(unit_id=1, pdf_id=1)\n",
+    "s3 = graph.add_state(unit_id=2, pdf_id=2)\n",
+    "graph.add_arc(graph.start_state, s1, weight=1.)\n",
+    "graph.add_arc(s1, s1)\n",
+    "graph.add_arc(s1, s2)\n",
+    "graph.add_arc(s2, s2)\n",
+    "graph.add_arc(s2, s3)\n",
+    "graph.add_arc(s3, s3)\n",
+    "graph.add_arc(s3, s1)\n",
+    "graph.add_arc(s3, graph.end_state, weight=0.5)\n",
+    "graph.normalize()\n",
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'graph' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-c86a17f00297>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'graph' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cgraph = graph.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -136,41 +191,37 @@
     "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='isotropic')\n",
-    "hmm_iso = beer.HMM.create(init_states, final_states, transitions,\n",
-    "                          modelset)\n",
+    "hmm_iso = beer.HMM.create(cgraph, modelset)\n",
     "\n",
     "# HMM (diag cov).\n",
     "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='diagonal')\n",
-    "hmm_diag = beer.HMM.create(init_states, final_states, transitions,\n",
-    "                            modelset)\n",
+    "hmm_diag = beer.HMM.create(cgraph, modelset)\n",
     "\n",
     "# HMM (full cov).\n",
     "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='full')\n",
-    "hmm_full = beer.HMM.create(init_states, final_states, transitions, modelset)\n",
+    "hmm_full = beer.HMM.create(cgraph, modelset)\n",
     "\n",
     "# HMM (shared isotropic cov).\n",
     "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='isotropic', )\n",
-    "hmm_shared_iso = beer.HMM.create(init_states, final_states, transitions,\n",
-    "                                 modelset)\n",
+    "hmm_shared_iso = beer.HMM.create(cgraph, modelset)\n",
     "\n",
     "# HMM (shared diag cov).\n",
     "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='diagonal', shared_cov=True)\n",
-    "hmm_shared_diag = beer.HMM.create(init_states, final_states, transitions,\n",
-    "                                  modelset)\n",
+    "hmm_shared_diag = beer.HMM.create(cgraph, modelset)\n",
     "\n",
     "# HMM (shared full cov).\n",
     "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='full', shared_cov=True)\n",
-    "hmm_shared_full = beer.HMM.create(init_states, final_states, transitions, modelset)\n",
+    "hmm_shared_full = beer.HMM.create(cgraph, modelset)\n",
     "\n",
     "\n",
     "models = {\n",
@@ -214,8 +265,7 @@
     "    for name, model in models.items():\n",
     "        optim = optims[name]\n",
     "        optim.zero_grad()\n",
-    "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X),\n",
-    "                                         inference_type='viterbi')\n",
+    "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X))\n",
     "        elbo.natural_backward()\n",
     "        elbos[name].append(float(elbo) / len(X))\n",
     "        optim.step()"
@@ -271,13 +321,6 @@
     "grid = gridplot(figs)\n",
     "show(grid)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
