Added align method to HMM.

--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -125,17 +125,15 @@
    "outputs": [],
    "source": [
     "graph = beer.graph.Graph()\n",
-    "s1 = graph.add_state(unit_id=0, pdf_id=0)\n",
-    "s2 = graph.add_state(unit_id=1, pdf_id=1)\n",
-    "s3 = graph.add_state(unit_id=2, pdf_id=2)\n",
-    "graph.add_arc(graph.start_state, s1, weight=1.)\n",
+    "s1 = graph.add_state(pdf_id=0)\n",
+    "s2 = graph.add_state(pdf_id=1)\n",
+    "s3 = graph.add_state(pdf_id=2)\n",
     "graph.add_arc(s1, s1)\n",
     "graph.add_arc(s1, s2)\n",
     "graph.add_arc(s2, s2)\n",
     "graph.add_arc(s2, s3)\n",
     "graph.add_arc(s3, s3)\n",
     "graph.add_arc(s3, s1)\n",
-    "graph.add_arc(s3, graph.end_state, weight=0.5)\n",
     "graph.normalize()\n",
     "graph"
    ]
@@ -146,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cgraph = graph.compile()"
+    "cgraph = graph.compile()\n"
    ]
   },
   {
